# vidhi-trading-platform

./: .dockerignore.disabled  .gitignore  1234  AWS_IK.md  CLAUDE_ARCH_PLAN M  IICPC_HACKTHON_CONTEXT.md  Makefile  Project_Vidhi_Architecture_Complete.md  README.md  aggressive_bot.py  apikey.json  apply_terraform.ps1  architecture_IICPC_algo_trading_platform.md  bot.cpp  bot.py  build_markdown.py  check.js  check_github.js  check_github.py  convert_to_docx.py  deploy_to_aws.ps1  deploy_to_aws.sh  docker-compose.yml  docx_text.txt  fix_test.md  index.js  logs.txt  logs_ansi.txt  old_readme.md  old_readme_utf8.md  out.txt  req.ps1  scratch_zip.py  tail_logs.txt  temp_key.txt  test.js  test2.js  test_backend_flow.js  test_binary_read.go  test_bot.py  (+12 more)
.github/workflows/: deploy.yml  fix_networking.yml
backend/: Dockerfile  go.mod  go.sum  main.go
backend/auth/: api_key.go
backend/db/: schema.sql
backend/forge/: forge.py  local_gm.py  requirements.txt  scanner.py  test_scanner.py  transpiler.py
backend/jobs/: queue.go
backend/sandbox/: seccomp.json  spawner.go
backend/scripts/: generate_datasets.py
backend/vidhi_sdk/: __init__.py  dummy.py  setup.py
backend/worker/: job_worker.go
bot-fleet/: Dockerfile  go.mod  main.go
data/: generate_ticks.py
data/ticks/: generate_dataset.py
datasets/: generate_all.py
docs/: architecture_blueprint.md  bare_metal_setup.md
docx_generator/: Vidhi_Architecture_Final.docx  front_matter.js  helpers.js  main.js  package-lock.json  package.json  part6.js
game-master/: CMakeLists.txt  Dockerfile  loader.cpp  main.cpp  persistent_lob.hpp  price_signal.hpp  watchdog.hpp
game-master/build_tests/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
game-master/tests/: test_persistent_lob.cpp  test_pnl_tracker.cpp  test_shadow_lob.cpp
grafana/provisioning/datasources/: datasource.yml
infra/ansible/: playbook.yml
sandbox/: Dockerfile  sandbox_runner.cpp
sandbox-manager/: Dockerfile  main.go  pool.go
starter_kit/: advanced_hft.cpp  beginner_sma.py  custom_bot_1_buyer.py  custom_bot_2_random.py  intermediate_stat_arb.py
terraform/: ec2_sim.tf  ecs.tf  main.tf  networking.tf  rds.tf  s3.tf  sqs.tf
terraform/scripts/: ec2_bootstrap.sh
test_extract/: deploy_to_aws.sh
test_extract/backend/: Dockerfile
test_extract/backend/credits/: ledger.go
test_extract/backend/forge/: forge_cpp.sh  vidhi_sdk.py
test_extract/backend/sandbox/: pool.go
test_extract/backend/scripts/: generate_datasets.py
test_extract/backend/validator/: elf_validator.go
test_extract/backend/vidhi_sdk/: README.md  cli.py  fast_dummy.py
test_extract/game-master/: bot_fleet.hpp  loader.cpp  persistent_lob.hpp  pnl_tracker.hpp  position_limits.hpp  rendezvous.hpp  sandbox.Dockerfile  seccomp_filter.hpp  shadow_lob.hpp  telemetry.hpp  tsc_calibrate.hpp
test_extract/game-master/build_tests/: Makefile  vidhi-tests
test_extract/sandbox/: Dockerfile  seccomp_filter.hpp
test_extract/sandbox-manager/: Dockerfile  go.mod  go.sum  spawner.go
test_extract/terraform/: data_tier.tf  main.tf  variables.tf
test_extract/vidhi_context/: Dockerfile  package-lock.json  package.json  vite.config.js
test_extract/vidhi_context/src/api/: client.js
test_extract/vidhi_context/src/components/: Layout.jsx
test_extract/vidhi_context/src/engine/: simulation.worker.js
test_extract/vidhi_context/src/pages/: AssetWiki.jsx  ContestCreator.jsx  RoleSelector.jsx
test_extract/vidhi_context/src/utils/: idb.js
tests/: e2e_test.py  simulate_contest.py
tmp_test/: test_bot.py
tools/: build_wasm.sh  convert_data.py  gen_arrow_dataset.py  healthcheck.sh  round_transition.py  setup_bare_metal.py  stress_test.py  test_e2e.py  test_e2e_poison.py
vidhi_context/: Dockerfile  index.html  nginx.conf
vidhi_context/src/: App.jsx  index.css
vidhi_context/src/api/: client.js
vidhi_context/src/components/: ChartWidgets.jsx  Layout.jsx  SidebarLeaderboard.jsx
vidhi_context/src/engine/: VidhiEngine.js  simulation.worker.js
vidhi_context/src/pages/: CalculatingResults.jsx  CodeArena.jsx  ContestCreator.jsx  ContestLobby.jsx  Leaderboard.jsx  RoleSelector.jsx  RoundsWiki.jsx  SimulationDashboard.jsx  Submissions.jsx
vidhi_context/src/store/: ContestStore.js
(+1 files in other folders)
